# filturd

./: .gitignore  README.md  index.html  package-lock.json  package.json
.cursor/rules/: codestyle.mdc  lootfilter.mdc  purpose.mdc  tauri.mdc
docs/: common_items.csv
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: Block.ts  BlockItem.ts  BlockName.ts
src-tauri/capabilities/: default.json  desktop.json
src-tauri/filter_examples/: FilterBladeFilter01.filter  blocks.json  blocks_small.json  example_001.filter  example_001.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: copy_item_desc.rs  greet.rs  mod.rs  open_file.rs  play_sound.rs
src-tauri/src/filter/: blocks.rs  items..json  mod.rs  parse.rs  read_from_disk.rs  sections.rs
src-tauri/src/filter/parser/: block_item.rs  blocks.rs  blocks_with_lines.rs  errors.rs  lines.rs  mod.rs  parse_file.rs  remove_comment.rs
src/components/: AppNav.vue  FilterTable.vue
src/composables/: useAppMenu.ts  useBlocks.ts  useFilterItems.ts  useFontSize.ts  useItemDescription.ts  useTheme.ts
src/styles/: main.css
src/types/: items.ts
src/utils/: fileOpener.ts  items.ts
